# opgp_projekt

./: .gitignore  Connect4.spec  LICENSE  README.md  graphics.py  logika_hry.py  prepojenie.py  pyproject.toml  skore.py  testy_logika.py  ukladanie.py
